Removed extra html

--- a/w21shopify_challenge.ipynb
+++ b/w21shopify_challenge.ipynb
@@ -366,7 +366,7 @@
     "    INNER JOIN Orders ON Shippers.ShipperID = Orders.ShipperID\n",
     "    WHERE ShipperName = 'Speedy Express' ;\n",
     "\n",
-    "    Result: <strong>54</strong>\n",
+    "    Result: 54\n",
     "\n",
     "<hr>"
    ]
@@ -398,7 +398,7 @@
     "    ORDER BY number_of_orders\n",
     "    DESC LIMIT 1;\n",
     "\n",
-    "    Result: <strong>Peacock  40</strong>\n",
+    "    Result: Peacock  40\n",
     "<hr>"
    ]
   },
@@ -430,7 +430,7 @@
     "    ORDER BY Sales_number\n",
     "    DESC LIMIT 1;\n",
     "\n",
-    "    Result:  <strong>Boston Crab Meat 160</strong> \n",
+    "    Result:  Boston Crab Meat 160 \n",
     "\n",
     "\n",
     "<hr>"
